# ppt

./: .gdbinit  .gitignore  Agent.hs  Configuration.hs  Generate.hs  LICENSE  Listener.hs  Listener.hs_orig  Main.hs  Makefile  README  README.markdown  SIParser.hs  StaticInstrumentation.hs  Storage.hs  api.org  beta1.lli.ll  beta1.spec  beta2.spec  beta2_reader_asm.org  cleanup.sh  dump_prmap.cpp  elfdump.hs  lensify.org  libmet_listener.cpp  met.h  metric_types.h  mettool.hs  modify.cpp  ppt.cabal  reader-min.cpp  reader-min.o.ll  reader.cpp  readme.org  stack.yaml  test1.cpp  test2.cpp  test_attach.sh  test_llvm.cpp  test_target.c  (+3 more)
Generate/: C.hs
agent/: attach.cpp  attach.h  platform-agent.h
agent/linux/: linux-agent.cpp  linux-agent.h
agent/solaris/: attach.cpp  driver.cpp
agent/test/: test_attach.cpp
doc/: buffer_syntax.md  command_line.md  file_format.md  performance_counters.md  ptrace_protocol.md
examples/: Makefile  minimal-client.cc  minimal.spec  ppt-control.h  rdpmc.c  simplebuffer.buf
examples/python/minimal/: minimal.py  setup.py
examples/python/test/: test_minimal.py
int-test/: Makefile  README.md  cpptest.cc  minimal.spec  test.py
src/: Ppt.hs
src/Ppt/: Agent.hs  BufferRep.hs  Configuration.hs  Decode.hs  ElfProcess.hs  Generate.hs  Layout.hs  Listener.hs  Parser.hs  SIParser.hs  StaticInstrumentation.hs  Storage.hs  mettool.hs  ppt-control.h
src/Ppt/Agent/: Command.hs  ElfProtocol.hs  ppt-control.h
src/Ppt/Frame/: BufferRep.hs  Layout.hs  LayoutAlgo.hs  ParsedRep.hs  Parser.hs  Prim.hs  Types.hs  Util.hs
src/Ppt/Generate/: C.hs  Cp.hs  CpConfig.hs  CpPrim.hs
src/Ppt/agent/: attach.cpp  driver.cpp
src/Ppt/agent/solaris/: solaris-agent.cpp
src/Ppt/agent/test/: dummy_client.cpp
test/: testing.org
test/Ppt/: LayoutSpec.hs  ParserGen.hs
tools/: Elf.hs  Main.hs
