name:                ppt
version:             0.1.0.0
synopsis:            Portable Performance Tool
description:         Please see README.md
homepage:            https://github.com/lally/ppt
license:             BSD3
license-file:        LICENSE
author:              Lally Singh
maintainer:          yell@lal.ly
copyright:           2016 Lally Singh & Virginia Tech
category:            Performance
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Ppt
                       , Ppt.Agent
                       , Ppt.Configuration
                       , Ppt.Generate
                       , Ppt.StaticInstrumentation
                       , Ppt.SIParser
                       , Ppt.Storage
                       , Ppt.Generate.C
                       , Ppt.Generate.Cp
                       , Ppt.Parser
                       , Ppt.BufferRep

  build-depends:       base >= 4.7 && < 5
                     , filepath
                     , directory
                     , unix
                     , elf
                     , process
                     , HStringTemplate
                     , MissingH
                     , parsec
                     , bytestring
                     , pureMD5
                     , type-level
                     , binary
                     , pretty
                     , filepath
                     , containers
                     , aeson
                     , either
  default-extensions:  UnicodeSyntax
                     , OverloadedStrings
  default-language:    Haskell2010

executable ppt
  hs-source-dirs:      tools
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ppt
  default-extensions:  UnicodeSyntax
                     , OverloadedStrings
  default-language:    Haskell2010

test-suite ppt-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ppt
  default-extensions:  UnicodeSyntax
                     , OverloadedStrings
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lally/ppt
