name:                ppt
version:             0.1.0.0
synopsis:            Portable Performance Tool
description:         Please see README.md
homepage:            https://github.com/lally/ppt
license:             BSD3
license-file:        LICENSE
author:              Lally Singh
maintainer:          yell@lal.ly
copyright:           2016 Lally Singh & Virginia Tech
category:            Performance
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Ppt
                       , Ppt.Agent
                       , Ppt.Agent.Command
                       , Ppt.Agent.ElfProtocol
                       , Ppt.Decode
                       , Ppt.Generate
                       , Ppt.Generate.CpConfig
                       , Ppt.Generate.CpPrim
                       , Ppt.Generate.Cp
                       , Ppt.Frame.Parser
                       , Ppt.Frame.ParsedRep
                       , Ppt.Frame.Layout
                       , Ppt.Frame.LayoutAlgo
                       , Ppt.Frame.Types
                       , Ppt.Frame.Util
                       , Ppt.ElfProcess
                       , Ppt.Frame.Prim

  build-depends:       HStringTemplate
                     , MissingH
                     , aeson
                     , base >= 4.7 && < 5
                     , binary
                     , bytestring
                     , bytestring-conversion
                     , containers
                     , directory
                     , either
                     , elf
                     , filepath
                     , hashable
                     , QuickCheck
                     , hspec
                     , inline-c
                     , lens
                     , lens-tutorial
                     , mtl
                     , parsec
                     , pretty
                     , process
                     , pureMD5
                     , safe
                     , spool
                     , time
                     , transformers
                     , type-level
                     , unix
                     , unordered-containers
                     , vector
  default-extensions:  UnicodeSyntax
                     , OverloadedStrings
  default-language:    Haskell2010

executable ppt
  hs-source-dirs:      tools
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ppt
  default-extensions:  UnicodeSyntax
                     , OverloadedStrings
  default-language:    Haskell2010
  extra-libraries:     pfm

executable elf
  hs-source-dirs:      tools
  main-is:             Elf.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ppt
  default-extensions:  UnicodeSyntax
                     , OverloadedStrings
  default-language:    Haskell2010

test-suite ppt-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       QuickCheck
                     , base
                     , lens
                     , hspec
                     , ppt
                     , random
  default-extensions:  UnicodeSyntax
                     , OverloadedStrings
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Ppt.LayoutSpec
                     , Ppt.ParserGen
  default-language:    Haskell2010
  extra-libraries:     pfm

source-repository head
  type:     git
  location: https://github.com/lally/ppt
